@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.dinionline" name="Digi Online Beta" version="0.7.1" provider-name="Mr Dini">
+<addon id="plugin.video.dinionline" name="Digi Online Beta" version="0.7.2" provider-name="Mr Dini">
   <requires>
-    <import addon="xbmc.python" version="2.24.0"/>
+    <!-- <import addon="xbmc.python" version="2.24.0"/> -->
     <import addon="script.module.mrdini.routines"/>
   </requires>
   <extension point="xbmc.python.pluginsource" library="default.py">
@@ -20,7 +20,7 @@
     <license>GNU AFFERO GENERAL PUBLIC LICENSE. Version 3, 19 November 2007</license>
     <website>mvshrk.xyz</website>
     <source>https://github.com/movieshark/DigiOnline</source>
-    <news>0.7.1[CR]- részletek a changelogban</news>
+    <news>0.7.2[CR]- részletek a changelogban</news>
     <assets>
         <icon>resources/assets/icon.png</icon>
         <fanart>resources/assets/fanart.png</fanart>
